--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,7 @@ nav a:hover {
 
 #footer-bar a{
     text-decoration: none;
+    color: black;
     font-size: x-large;
     font-weight: bold;
 }
