--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
 
 }
 
-a, p, h1, h2, h3{
+a, p, h1, h2, h3, div{
     font-family: acumin-pro, sans-serif;
     margin: 0;
 }
@@ -313,4 +313,40 @@ nav a:hover {
     font-size: 40px;
 }
 
+#blog-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.banner-top {
+    grid-column: 1/9;
+    grid-row: 1/2;
+    position: relative;
+    text-align: center;
+    color: black;
+}
+
+.ban-img {
+    width: 100%;
+    margin-top: 10px;
+    height: 60%;
+}
+
+.message {
+    position: absolute;
+    left: 16px;
+    font-size: 90px;
+}
+
+.posts-ft {
+    grid-column: 1/9;
+    grid-row: 2/6;
+}
+
+#latest-message {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    
+
+}
 
